--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                                                 <p>available via dekstop app, mobile app, set-top.</p>
                                                 <a href="#">kids</a>
                                                 <div class="icon text-right">
-                                                    <a href="#" class="active"><i class="fas fa-bell"></i></a>
-                                                    <a href="#"><i class="fas fa-user-alt"></i></a>
+                                                    <a href="#"><i class="far fa-heart"></i></a>
+                                                    <a href="#"><i class="far fa-comments"></i></a>
+                                                    <button><i class="fas fa-coins"></i></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -92,72 +93,38 @@
                                                 <p>available via dekstop app, mobile app, set-top.</p>
                                                 <a href="#">kids</a>
                                                 <div class="icon text-right">
-                                                    <a href="#" class="active"><i class="fas fa-bell"></i></a>
-                                                    <a href="#"><i class="fas fa-user-alt"></i></a>
+                                                    <a href="#"><i class="far fa-heart"></i></a>
+                                                    <a href="#"><i class="far fa-comments"></i></a>
+                                                    <button><i class="fas fa-coins"></i></button>
+                                                </div>
+                                                <div id="comment" class="comment">
+                                                    <input type="text" class="form-control" placeholder="write your comment">
+                                                    <div class="pre_comment pt-15">
+                                                        <div class="pre_img">
+                                                            <img src="images/banner/profile.png" alt="noot-found">
+                                                        </div>
+                                                        <div class="pre_text">
+                                                            <h5>admin <span>1h ago</span></h5>
+                                                            <p>Lorem ipsum dolor sit amet.ipsum dolor sit amet.</p>
+                                                            <a href="#">edit</a>
+                                                            <a href="#">delete</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="dot_dot">
+                                                    <ul>
+                                                        <li><i class="fas fa-angle-double-down"></i>
+                                                            <ul>
+                                                                <li><a href="#">edit post</a></li>
+                                                                <li><a href="#">delete post</a></li>
+                                                            </ul>
+                                                        </li>
+                                                    </ul>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="slider_item">
-                                        <div class="slider_box">
-                                            <div class="img">
-                                                <img src="images/banner/slider-1.png" alt="not-found">
-                                            </div>
-                                            <div class="text">
-                                                <h3>tips 4 watching</h3>
-                                                <p>available via dekstop app, mobile app, set-top.</p>
-                                                <a href="#">kids</a>
-                                                <div class="icon text-right">
-                                                    <a href="#" class="active"><i class="fas fa-bell"></i></a>
-                                                    <a href="#"><i class="fas fa-user-alt"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="slider_box mt-20">
-                                            <div class="img">
-                                                <img src="images/banner/slider-1.png" alt="not-found">
-                                            </div>
-                                            <div class="text">
-                                                <h3>tips 4 watching</h3>
-                                                <p>available via dekstop app, mobile app, set-top.</p>
-                                                <a href="#">kids</a>
-                                                <div class="icon text-right">
-                                                    <a href="#" class="active"><i class="fas fa-bell"></i></a>
-                                                    <a href="#"><i class="fas fa-user-alt"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="slider_item">
-                                        <div class="slider_box">
-                                            <div class="img">
-                                                <img src="images/banner/slider-1.png" alt="not-found">
-                                            </div>
-                                            <div class="text">
-                                                <h3>tips 4 watching</h3>
-                                                <p>available via dekstop app, mobile app, set-top.</p>
-                                                <a href="#">kids</a>
-                                                <div class="icon text-right">
-                                                    <a href="#" class="active"><i class="fas fa-bell"></i></a>
-                                                    <a href="#"><i class="fas fa-user-alt"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="slider_box mt-20">
-                                            <div class="img">
-                                                <img src="images/banner/slider-1.png" alt="not-found">
-                                            </div>
-                                            <div class="text">
-                                                <h3>tips 4 watching</h3>
-                                                <p>available via dekstop app, mobile app, set-top.</p>
-                                                <a href="#">kids</a>
-                                                <div class="icon text-right">
-                                                    <a href="#" class="active"><i class="fas fa-bell"></i></a>
-                                                    <a href="#"><i class="fas fa-user-alt"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
