--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <img src="images/favicon.ico" alt="not-found">
                         </div>
                         <div class="search text-center">
-                            <input type="search" class="form-control" placeholder="search">
+                            <input type="search" class="form-control" placeholder="Search">
                             <a href="#"><i class="fas fa-search"></i></a>
                         </div>
                         <div class="header_icon text-right">
@@ -58,11 +58,26 @@
                     </div>
                     <!--banner-->
                     <div class="banner">
+                        <div class="banner_top">
+                            <a href="#"><i class="fas fa-check-circle"></i>THEADMIN</a>
+                            <a href="#"><i class="fas fa-check-circle"></i>STATUS: CRYPTOGITL</a>
+                            <a href="#"><i class="fas fa-check-circle"></i>0 EDUCATORS</a>
+                        </div>
+                        <div class="banner_left">
+                            <a href="#"><i class="far fa-image"></i>6</a>
+                            <a href="#"><i class="far fa-image"></i>0</a>
+                            <a href="#"><i class="fas fa-music"></i>1</a>
+                            <a href="#"><i class="far fa-image"></i>5</a>
+                        </div>
                         <div class="row justify-content-center">
-                            <div class="col-lg-12 col-xl-7">
+                            <div class="col-md-10 col-xl-7">
                                 <div class="big_banner">
                                     <img src="images/banner/big-banner.png" class="img-fluid w-100" alt="not-found">
                                     <img src="images/banner/small-banner.png" alt="not-found">
+                                    <div class="banner_bottom">
+                                        <a href="#"><i class="fas fa-unlock"></i>Unlock Premium Post- $5<i class="fas fa-caret-down"></i></a>
+                                        <a href="#"><i class="fas fa-unlock"></i>Subscribe To Free Post</a>
+                                    </div>
                                 </div>
                             </div>
                             <!--slider-->
@@ -84,45 +99,9 @@
                                                 </div>
                                                 <div id="comment" class="comment">
                                                     <input type="text" class="form-control" placeholder="write your comment">
-                                                    <div class="pre_comment pt-15">
-                                                        <div class="pre_img">
-                                                            <img src="images/banner/profile.png" alt="noot-found">
-                                                        </div>
-                                                        <div class="pre_text">
-                                                            <h5>admin <span>1h ago</span></h5>
-                                                            <p>Lorem ipsum dolor sit amet.ipsum dolor sit amet.</p>
-                                                            <a href="#">edit</a>
-                                                            <a href="#">delete</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="dot_dot">
-                                                    <ul>
-                                                        <li><i class="fas fa-angle-double-down"></i>
-                                                            <ul>
-                                                                <li><a href="#">edit post</a></li>
-                                                                <li><a href="#">delete post</a></li>
-                                                            </ul>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="slider_box mt-20">
-                                            <div class="img">
-                                                <img src="images/banner/slider-1.png" alt="not-found">
-                                            </div>
-                                            <div class="text">
-                                                <h3>tips 4 watching</h3>
-                                                <p>available via dekstop app, mobile app, set-top.</p>
-                                                <a href="#">kids</a>
-                                                <div class="icon text-right">
-                                                    <a href="#"><i class="far fa-heart"></i></a>
-                                                    <a href="#"><i class="far fa-comments"></i></a>
-                                                    <button><i class="fas fa-coins"></i></button>
-                                                </div>
-                                                <div id="comment" class="comment">
-                                                    <input type="text" class="form-control" placeholder="write your comment">
+                                                    <button type="submit">
+                                                        <i class="fas fa-sign-in-alt"></i>
+                                                    </button>
                                                     <div class="pre_comment pt-15">
                                                         <div class="pre_img">
                                                             <img src="images/banner/profile.png" alt="noot-found">
@@ -164,45 +143,9 @@
                                                 </div>
                                                 <div id="comment" class="comment">
                                                     <input type="text" class="form-control" placeholder="write your comment">
-                                                    <div class="pre_comment pt-15">
-                                                        <div class="pre_img">
-                                                            <img src="images/banner/profile.png" alt="noot-found">
-                                                        </div>
-                                                        <div class="pre_text">
-                                                            <h5>admin <span>1h ago</span></h5>
-                                                            <p>Lorem ipsum dolor sit amet.ipsum dolor sit amet.</p>
-                                                            <a href="#">edit</a>
-                                                            <a href="#">delete</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="dot_dot">
-                                                    <ul>
-                                                        <li><i class="fas fa-angle-double-down"></i>
-                                                            <ul>
-                                                                <li><a href="#">edit post</a></li>
-                                                                <li><a href="#">delete post</a></li>
-                                                            </ul>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="slider_box mt-20">
-                                            <div class="img">
-                                                <img src="images/banner/slider-1.png" alt="not-found">
-                                            </div>
-                                            <div class="text">
-                                                <h3>tips 4 watching</h3>
-                                                <p>available via dekstop app, mobile app, set-top.</p>
-                                                <a href="#">kids</a>
-                                                <div class="icon text-right">
-                                                    <a href="#"><i class="far fa-heart"></i></a>
-                                                    <a href="#"><i class="far fa-comments"></i></a>
-                                                    <button><i class="fas fa-coins"></i></button>
-                                                </div>
-                                                <div id="comment" class="comment">
-                                                    <input type="text" class="form-control" placeholder="write your comment">
+                                                    <button type="submit">
+                                                        <i class="fas fa-sign-in-alt"></i>
+                                                    </button>
                                                     <div class="pre_comment pt-15">
                                                         <div class="pre_img">
                                                             <img src="images/banner/profile.png" alt="noot-found">
@@ -244,45 +187,9 @@
                                                 </div>
                                                 <div id="comment" class="comment">
                                                     <input type="text" class="form-control" placeholder="write your comment">
-                                                    <div class="pre_comment pt-15">
-                                                        <div class="pre_img">
-                                                            <img src="images/banner/profile.png" alt="noot-found">
-                                                        </div>
-                                                        <div class="pre_text">
-                                                            <h5>admin <span>1h ago</span></h5>
-                                                            <p>Lorem ipsum dolor sit amet.ipsum dolor sit amet.</p>
-                                                            <a href="#">edit</a>
-                                                            <a href="#">delete</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="dot_dot">
-                                                    <ul>
-                                                        <li><i class="fas fa-angle-double-down"></i>
-                                                            <ul>
-                                                                <li><a href="#">edit post</a></li>
-                                                                <li><a href="#">delete post</a></li>
-                                                            </ul>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="slider_box mt-20">
-                                            <div class="img">
-                                                <img src="images/banner/slider-1.png" alt="not-found">
-                                            </div>
-                                            <div class="text">
-                                                <h3>tips 4 watching</h3>
-                                                <p>available via dekstop app, mobile app, set-top.</p>
-                                                <a href="#">kids</a>
-                                                <div class="icon text-right">
-                                                    <a href="#"><i class="far fa-heart"></i></a>
-                                                    <a href="#"><i class="far fa-comments"></i></a>
-                                                    <button><i class="fas fa-coins"></i></button>
-                                                </div>
-                                                <div id="comment" class="comment">
-                                                    <input type="text" class="form-control" placeholder="write your comment">
+                                                    <button type="submit">
+                                                        <i class="fas fa-sign-in-alt"></i>
+                                                    </button>
                                                     <div class="pre_comment pt-15">
                                                         <div class="pre_img">
                                                             <img src="images/banner/profile.png" alt="noot-found">
@@ -427,6 +334,7 @@
             </div>
         </div>
     </section>
+
     <!--=================Header Section End=================-->
 
 
